--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -10,20 +10,20 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-beta", features = [] }
+tauri-build = { version = "2.0.0-rc", features = [] }
 
 [dependencies]
-tauri = { version = "2.0.0-beta", features = [
+tauri = { version = "2.0.0-rc", features = [
     "devtools",
     "image-ico",
     "image-png",
     "tray-icon",
     "unstable",
 ] }
-tauri-plugin-shell = "2.0.0-beta"
-tauri-plugin-window-state = "2.0.0-beta"
+tauri-plugin-shell = "2.0.0-rc"
+tauri-plugin-window-state = "2.0.0-rc"
 serde_json = "1.0"
-tauri-plugin-store = "2.0.0-beta"
+tauri-plugin-store = "2.0.0-rc"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
