--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2.0.0-beta.11",
-    "@tauri-apps/plugin-shell": "^2.0.0-beta.3",
-    "@tauri-apps/plugin-store": "2.0.0-beta.3",
+    "@tauri-apps/api": "2.0.0-rc.0",
+    "@tauri-apps/plugin-shell": "2.0.0-rc.0",
+    "@tauri-apps/plugin-store": "2.0.0-rc.0",
     "react": "^18.3.1",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^2.0.0-beta.15",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.2.1",
-    "typescript": "^5.0.2",
-    "vite": "^5.2.10"
+    "@tauri-apps/cli": "2.0.0-rc.3",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "typescript": "^5.5.4",
+    "vite": "^5.4.0"
   }
 }
