--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "weread",
   "private": true,
-  "version": "0.0.3",
+  "version": "0.0.8",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,21 +11,21 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "2.0.0-rc.0",
-    "@tauri-apps/plugin-shell": "2.0.0-rc.0",
-    "@tauri-apps/plugin-store": "2.0.0-rc.0",
+    "@tauri-apps/api": "^2.0.2",
+    "@tauri-apps/plugin-shell": "^2.0.0",
+    "@tauri-apps/plugin-store": "^2.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.2.1",
-    "@sveltejs/vite-plugin-svelte": "^3.1.1",
-    "@tauri-apps/cli": "2.0.0-rc.2",
-    "@tsconfig/svelte": "^5.0.2",
-    "svelte": "^4.2.18",
-    "svelte-check": "^3.8.0",
-    "tslib": "^2.6.3",
-    "typescript": "^5.4.5",
-    "vite": "^5.4.0"
+    "@sveltejs/adapter-auto": "^3.2.5",
+    "@sveltejs/vite-plugin-svelte": "^3.1.2",
+    "@tauri-apps/cli": "^2.0.2",
+    "@tsconfig/svelte": "^5.0.4",
+    "svelte": "^4.2.19",
+    "svelte-check": "^4.0.4",
+    "tslib": "^2.7.0",
+    "typescript": "^5.6.2",
+    "vite": "^5.4.8"
   }
 }
