--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -10,19 +10,19 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-rc", features = [] }
+tauri-build = { version = "2.0.0", features = [] }
 
 [dependencies]
-tauri = { version = "2.0.0-rc", features = [
+tauri = { version = "2.0.0", features = [
     "devtools",
     "image-ico",
     "image-png",
     "tray-icon",
     "unstable",
 ] }
-tauri-plugin-shell = "2.0.0-rc"
-tauri-plugin-window-state = "2.0.0-rc"
-tauri-plugin-store = "2.0.0-rc"
+tauri-plugin-shell = "2.0.0"
+tauri-plugin-window-state = "2.0.0"
+tauri-plugin-store = "2.0.0"
 serde_json = "1.0"
 serde = { version = "1", features = ["derive"] }
 
